Finalize the infovisual web project

--- a/finalProjectWebsite/s/css/main.css
+++ b/finalProjectWebsite/s/css/main.css
@@ -480,7 +480,7 @@ uiload {
   .avatar .p1 {
     background-image: url(../../img/interviewee/中山里里長.png); }
   .avatar .p2 {
-    background-image: url(../../img/interviewee/天主教失智老人基金會的社工主.png); }
+    background-image: url(../../img/interviewee/天主教失智老人基金會的社工主任.png); }
   .avatar .p3 {
     background-image: url(../../img/interviewee/衛生局視察.png); }
 
